# twitch_api

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  copying.md  release.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: auth.rs  channel_feed.rs  channels.rs  chat.rs  communities.rs  ingests.rs  lib.rs  response.rs  streams.rs  teams.rs  users.rs  videos.rs
src/kraken/: channel_feed.rs  channels.rs  chat.rs  communities.rs  games.rs  ingests.rs  search.rs  streams.rs  teams.rs  users.rs  videos.rs
